// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormInputGroups ACT theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiGrid-root makeStyles-gridContainerRoot-1 MuiGrid-container MuiGrid-spacing-xs-4 css-tkfwqb-MuiGrid-root"
  >
    <div
      class="MuiGrid-root makeStyles-gridItemRoot-2 MuiGrid-item css-1bxaljh-MuiGrid-root"
    >
      <div
        class="MuiFormControl-root css-1nrlq1o-MuiFormControl-root"
      >
        <label
          class="makeStyles-labelRoot-3 MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-root MuiFormLabel-colorPrimary MuiFormLabel-filled css-1n9em2m-MuiFormLabel-root-MuiInputLabel-root"
          data-shrink="true"
        >
          <div
            class="label-split"
          >
            <span
              class="label-help"
            />
            <span
              class="required"
            >
              Required
            </span>
          </div>
        </label>
        <div
          class="MuiInput-root MuiInput-underline MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl css-15z0m7-MuiInputBase-root-MuiInput-root"
          required=""
        >
          <input
            aria-invalid="false"
            class="MuiInput-input MuiInputBase-input css-m09luf-MuiInputBase-input-MuiInput-input"
            placeholder="Input 1"
            required=""
            type="text"
            value="value1"
          />
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root makeStyles-gridItemRoot-2 MuiGrid-item css-1bxaljh-MuiGrid-root"
    >
      <div
        class="MuiFormControl-root css-1nrlq1o-MuiFormControl-root"
      >
        <label
          class="makeStyles-labelRoot-3 MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-root MuiFormLabel-colorPrimary MuiFormLabel-filled css-1n9em2m-MuiFormLabel-root-MuiInputLabel-root"
          data-shrink="true"
        >
          <div
            class="label-split"
          >
            <span
              class="label-help"
            />
            <span
              class="required"
            >
              Required
            </span>
          </div>
        </label>
        <div
          class="MuiInput-root MuiInput-underline MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl css-15z0m7-MuiInputBase-root-MuiInput-root"
          required=""
        >
          <input
            aria-invalid="false"
            class="MuiInput-input MuiInputBase-input css-m09luf-MuiInputBase-input-MuiInput-input"
            placeholder="Input 2"
            required=""
            type="password"
            value="value2"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiGrid-root makeStyles-gridContainerRoot-1 MuiGrid-container MuiGrid-spacing-xs-4 css-tkfwqb-MuiGrid-root"
  >
    <div
      class="MuiGrid-root makeStyles-gridItemRoot-2 MuiGrid-item css-1bxaljh-MuiGrid-root"
    >
      <div
        class="MuiFormControl-root css-1nrlq1o-MuiFormControl-root"
      >
        <label
          class="makeStyles-labelRoot-3 MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-root MuiFormLabel-colorPrimary MuiFormLabel-filled css-1n9em2m-MuiFormLabel-root-MuiInputLabel-root"
          data-shrink="true"
        >
          <div
            class="label-split"
          >
            <span
              class="label-help"
            />
          </div>
        </label>
        <div
          class="MuiInput-root MuiInput-underline MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl css-15z0m7-MuiInputBase-root-MuiInput-root"
        >
          <input
            aria-invalid="false"
            class="MuiInput-input MuiInputBase-input css-m09luf-MuiInputBase-input-MuiInput-input"
            placeholder="Input 3"
            type="text"
            value="value3"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FormInputGroups ACT_ET theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiGrid-root makeStyles-gridContainerRoot-4 MuiGrid-container MuiGrid-spacing-xs-4 css-tkfwqb-MuiGrid-root"
  >
    <div
      class="MuiGrid-root makeStyles-gridItemRoot-5 MuiGrid-item css-1bxaljh-MuiGrid-root"
    >
      <div
        class="MuiFormControl-root css-1nrlq1o-MuiFormControl-root"
      >
        <label
          class="makeStyles-labelRoot-6 MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-root MuiFormLabel-colorPrimary MuiFormLabel-filled css-afxn6m-MuiFormLabel-root-MuiInputLabel-root"
          data-shrink="true"
        >
          <div
            class="label-split"
          >
            <span
              class="label-help"
            />
            <span
              class="required"
            >
              Required
            </span>
          </div>
        </label>
        <div
          class="MuiInput-root MuiInput-underline MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl css-9b1qho-MuiInputBase-root-MuiInput-root"
          required=""
        >
          <input
            aria-invalid="false"
            class="MuiInput-input MuiInputBase-input css-1tylqhy-MuiInputBase-input-MuiInput-input"
            placeholder="Input 1"
            required=""
            type="text"
            value="value1"
          />
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root makeStyles-gridItemRoot-5 MuiGrid-item css-1bxaljh-MuiGrid-root"
    >
      <div
        class="MuiFormControl-root css-1nrlq1o-MuiFormControl-root"
      >
        <label
          class="makeStyles-labelRoot-6 MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-root MuiFormLabel-colorPrimary MuiFormLabel-filled css-afxn6m-MuiFormLabel-root-MuiInputLabel-root"
          data-shrink="true"
        >
          <div
            class="label-split"
          >
            <span
              class="label-help"
            />
            <span
              class="required"
            >
              Required
            </span>
          </div>
        </label>
        <div
          class="MuiInput-root MuiInput-underline MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl css-9b1qho-MuiInputBase-root-MuiInput-root"
          required=""
        >
          <input
            aria-invalid="false"
            class="MuiInput-input MuiInputBase-input css-1tylqhy-MuiInputBase-input-MuiInput-input"
            placeholder="Input 2"
            required=""
            type="password"
            value="value2"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiGrid-root makeStyles-gridContainerRoot-4 MuiGrid-container MuiGrid-spacing-xs-4 css-tkfwqb-MuiGrid-root"
  >
    <div
      class="MuiGrid-root makeStyles-gridItemRoot-5 MuiGrid-item css-1bxaljh-MuiGrid-root"
    >
      <div
        class="MuiFormControl-root css-1nrlq1o-MuiFormControl-root"
      >
        <label
          class="makeStyles-labelRoot-6 MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-root MuiFormLabel-colorPrimary MuiFormLabel-filled css-afxn6m-MuiFormLabel-root-MuiInputLabel-root"
          data-shrink="true"
        >
          <div
            class="label-split"
          >
            <span
              class="label-help"
            />
          </div>
        </label>
        <div
          class="MuiInput-root MuiInput-underline MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl css-9b1qho-MuiInputBase-root-MuiInput-root"
        >
          <input
            aria-invalid="false"
            class="MuiInput-input MuiInputBase-input css-1tylqhy-MuiInputBase-input-MuiInput-input"
            placeholder="Input 3"
            type="text"
            value="value3"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`FormInputGroups ENCOURA_DATALAB theme matches the snapshot 1`] = `
<div>
  <div
    class="MuiGrid-root makeStyles-gridContainerRoot-7 MuiGrid-container MuiGrid-spacing-xs-4 css-tkfwqb-MuiGrid-root"
  >
    <div
      class="MuiGrid-root makeStyles-gridItemRoot-8 MuiGrid-item css-1bxaljh-MuiGrid-root"
    >
      <div
        class="MuiFormControl-root css-1nrlq1o-MuiFormControl-root"
      >
        <label
          class="makeStyles-labelRoot-9 MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-root MuiFormLabel-colorPrimary MuiFormLabel-filled css-1rh3jyq-MuiFormLabel-root-MuiInputLabel-root"
          data-shrink="true"
        >
          <div
            class="label-split"
          >
            <span
              class="label-help"
            />
            <span
              class="required"
            >
              Required
            </span>
          </div>
        </label>
        <div
          class="MuiInput-root MuiInput-underline MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl css-1t2osd-MuiInputBase-root-MuiInput-root"
          required=""
        >
          <input
            aria-invalid="false"
            class="MuiInput-input MuiInputBase-input css-1tylqhy-MuiInputBase-input-MuiInput-input"
            placeholder="Input 1"
            required=""
            type="text"
            value="value1"
          />
        </div>
      </div>
    </div>
    <div
      class="MuiGrid-root makeStyles-gridItemRoot-8 MuiGrid-item css-1bxaljh-MuiGrid-root"
    >
      <div
        class="MuiFormControl-root css-1nrlq1o-MuiFormControl-root"
      >
        <label
          class="makeStyles-labelRoot-9 MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-root MuiFormLabel-colorPrimary MuiFormLabel-filled css-1rh3jyq-MuiFormLabel-root-MuiInputLabel-root"
          data-shrink="true"
        >
          <div
            class="label-split"
          >
            <span
              class="label-help"
            />
            <span
              class="required"
            >
              Required
            </span>
          </div>
        </label>
        <div
          class="MuiInput-root MuiInput-underline MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl css-1t2osd-MuiInputBase-root-MuiInput-root"
          required=""
        >
          <input
            aria-invalid="false"
            class="MuiInput-input MuiInputBase-input css-1tylqhy-MuiInputBase-input-MuiInput-input"
            placeholder="Input 2"
            required=""
            type="password"
            value="value2"
          />
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiGrid-root makeStyles-gridContainerRoot-7 MuiGrid-container MuiGrid-spacing-xs-4 css-tkfwqb-MuiGrid-root"
  >
    <div
      class="MuiGrid-root makeStyles-gridItemRoot-8 MuiGrid-item css-1bxaljh-MuiGrid-root"
    >
      <div
        class="MuiFormControl-root css-1nrlq1o-MuiFormControl-root"
      >
        <label
          class="makeStyles-labelRoot-9 MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-animated MuiInputLabel-shrink MuiInputLabel-outlined MuiFormLabel-root MuiFormLabel-colorPrimary MuiFormLabel-filled css-1rh3jyq-MuiFormLabel-root-MuiInputLabel-root"
          data-shrink="true"
        >
          <div
            class="label-split"
          >
            <span
              class="label-help"
            />
          </div>
        </label>
        <div
          class="MuiInput-root MuiInput-underline MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl css-1t2osd-MuiInputBase-root-MuiInput-root"
        >
          <input
            aria-invalid="false"
            class="MuiInput-input MuiInputBase-input css-1tylqhy-MuiInputBase-input-MuiInput-input"
            placeholder="Input 3"
            type="text"
            value="value3"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
